--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="4.0.0-alpha" targetFramework="net46" />
-  <package id="jQuery" version="1.9.1" targetFramework="net46" />
+  <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net46" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net46" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net46" developmentDependency="true" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net46" />
+  <package id="Microsoft.Net.Compilers" version="1.1.0-beta1-20150825-02" targetFramework="net46" developmentDependency="true" />
 </packages>
