--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/ClusterKit.Monitoring.Web.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/ClusterKit.Monitoring.Web.csproj
@@ -88,6 +88,8 @@
     <Content Include="index.html" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.0.js" />
+    <Content Include="Scripts\jquery.signalR-2.2.0.min.js" />
     <Content Include="Scripts\knockout-3.3.0.debug.js" />
     <Content Include="Scripts\knockout-3.3.0.js" />
     <Content Include="Web.config" />
