--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Tests/packages.config
@@ -9,6 +9,7 @@
   <package id="Akka.Remote" version="1.0.4" targetFramework="net46" />
   <package id="Akka.TestKit" version="1.0.4" targetFramework="net46" />
   <package id="Akka.TestKit.Xunit2" version="1.0.4" targetFramework="net46" />
+  <package id="bootstrap" version="3.3.5" targetFramework="net46" />
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
@@ -16,6 +17,7 @@
   <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net46" />
   <package id="Helios" version="1.4.1" targetFramework="net46" />
   <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net46" />
+  <package id="jQuery" version="2.1.4" targetFramework="net46" />
   <package id="Microsoft.Bcl.Immutable" version="1.0.34" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
