--- a/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/ClusterKit.Monitoring.Web.csproj
+++ b/ClusterKit.Monitoring/ClusterKit.Monitoring.Web/ClusterKit.Monitoring.Web.csproj
@@ -82,6 +82,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\ClusterKit.Monitoring.css" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.4.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
